tests/err_qty/exp_frac_zero_div_one.stderr
error: unit with exponent of zero is scalar
 --> tests/err_qty/exp_frac_zero_div_one.rs:5:28
  |
5 |     let _err = qty![1.0 m^(0/1)];
  |                            ^
